<resources>
    <string name="app_name">Project</string>
    <string name="sign_in">Sign In</string>
    <string name="create">Create Account</string>
    <string name="account_text">Have an Account?</string>
    <string name="newapp">New Account?</string>
    <string name="settings">Settings</string>
    <string name="location_text">Location:</string>
    <string name="time_zone">Time Zone</string>
    <string name="time_zone_text">Time Zone:</string>
    <string name="location">"Location: "</string>
    <string name="change_password">Change Password</string>
    <string name="email_text">"Email: "</string>
    <string name="password_text">"Password: "</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logout">Log Out</string>
    <string name="back">Back</string>
    <string name="calorie">Calorie</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
</resources>